VTK Addendum:

The UTF8-CPP library is used as an internal implementation detail in the vtkUnicodeString
class.  We've made several VTK-specific modifications to support older compilers:

* Renamed the "utf8" namespace to "vtk_utf8" to avoid clashes with system copies of the library.

* Replaced references to iterator_traits<>::difference_type with vtkstd::string::difference_type
  to mollify MSVC 6.  This significantly reduces the generality of the library, but meets the
  needs of vtkUnicodeString.

* Altered utf16to8() to work with vtkstd::back_insert_iterator, which also reduces the
  generality of the library.

For these reasons, we strongly discourage use of the VTK-specific version of UTF8-CPP, which is
a private part the VTK API, and subject to removal or revision at any time.  See the following
links for the full version of the library:

http://utfcpp.sourceforge.net/
http://sourceforge.net/projects/utfcpp

The VTK team.

------------------------------------------------------------------------------------------------

utf8 cpp library
Release 2.1

This is a minor feature release - added the function peek_next. 

Changes from version 2.o
- Implemented feature request [ 1770746 ] "Provide a const version of next() (some sort of a peek() )

Files included in the release: utf8.h, core.h, checked.h, unchecked.h, utf8cpp.html, ReleaseNotes